--- a/supervisord-kibana.conf
+++ b/supervisord-kibana.conf
@@ -9,6 +9,12 @@ autorestart=true
 command=/elasticsearch/bin/elasticsearch -f
 autorestart=true
 
+[program:kibana]
+stderr_logfile=/var/log/supervisor/kibana_err.log
+stdout_logfile=/var/log/supervisor/kibana_out.log
+command=/kibana/bin/kibana &
+autorestart=true
+
 [program:nginx]
 command=/usr/sbin/nginx
 autorestart=true
